# contact-api

./: .gitignore  Cargo.toml  settings.yaml
scripts/: build-static.sh  start-mailhog.sh
src/: email.rs  http.rs  lib.rs  logging.rs  main.rs  settings.rs
src/domain/: contact.rs
src/domain/contact/: email.rs  message.rs  name.rs
src/http/: routes.rs
src/http/routes/: contact.rs  health_check.rs
tests/: contact.rs  health_check.rs
tests/common/: mod.rs
